--- a/vercel.json
+++ b/vercel.json
@@ -4,17 +4,11 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    },
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node",
-      "config": { "maxDuration": 30 }
+      "config": { "distDir": "dist/public" }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)",   "dest": "/dist/$1" }
+    { "src": "/(.*)", "dest": "/$1" }
   ],
   "env": {
     "NODE_ENV": "production"
