--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
